--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aos": "^3.0.0-beta.6",
     "next": "12.1.6",
     "react": "18.2.0",
+    "react-countup": "^6.3.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "swiper": "^8.2.6"
