--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-countup": "^6.3.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-visibility-sensor": "^5.1.1",
     "swiper": "^8.2.6"
   },
   "devDependencies": {
