--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "aos": "^3.0.0-beta.6",
     "next": "12.1.6",
+    "rc-tabs": "^11.16.1",
     "react": "18.2.0",
+    "react-carousel-minimal": "^1.4.1",
     "react-countup": "^6.3.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-image-gallery": "^1.2.8",
+    "react-tabs": "^5.1.0",
     "react-visibility-sensor": "^5.1.1",
     "swiper": "^8.2.6"
   },
@@ -23,6 +27,7 @@
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/react-image-gallery": "^1.0.5",
     "@types/react-slick": "^0.23.9",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
