--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fancyapps/ui": "^4.0.27",
     "aos": "^3.0.0-beta.6",
     "next": "12.1.6",
     "rc-tabs": "^11.16.1",
@@ -16,14 +17,18 @@
     "react-carousel-minimal": "^1.4.1",
     "react-countup": "^6.3.0",
     "react-dom": "18.2.0",
+    "react-grid-gallery": "^0.5.5",
     "react-icons": "^4.4.0",
     "react-image-gallery": "^1.2.8",
+    "react-image-lightbox": "^5.1.4",
+    "react-images-viewer": "^1.7.1",
     "react-tabs": "^5.1.0",
     "react-visibility-sensor": "^5.1.1",
     "swiper": "^8.2.6"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
+    "@types/fancybox": "^3.5.3",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
@@ -32,6 +37,8 @@
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "fancybox": "^3.0.1",
+    "fslightbox-react": "^1.6.2-2",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4",
     "typescript": "4.7.4"
