--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-images-viewer": "^1.7.1",
     "react-tabs": "^5.1.0",
     "react-visibility-sensor": "^5.1.1",
-    "swiper": "^8.2.6"
+    "swiper": "^8.2.6",
+    "video-react": "^0.15.0",
+    "youtube-video-js": "^3.6.0"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
@@ -34,6 +36,7 @@
     "@types/react-dom": "18.0.5",
     "@types/react-image-gallery": "^1.0.5",
     "@types/react-slick": "^0.23.9",
+    "@types/video-react": "^0.15.0",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
