--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "next": "12.1.6",
     "rc-tabs": "^11.16.1",
     "react": "18.2.0",
+    "react-awesome-lightbox": "^1.8.1",
     "react-carousel-minimal": "^1.4.1",
     "react-countup": "^6.3.0",
     "react-dom": "18.2.0",
+    "react-fancybox": "^0.2.5",
     "react-grid-gallery": "^0.5.5",
     "react-icons": "^4.4.0",
     "react-image-gallery": "^1.2.8",
     "react-image-lightbox": "^5.1.4",
     "react-images-viewer": "^1.7.1",
+    "react-modal-image": "^2.5.0",
     "react-tabs": "^5.1.0",
     "react-visibility-sensor": "^5.1.1",
     "swiper": "^8.2.6",
