--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   },
   "dependencies": {
     "@fancyapps/ui": "^4.0.27",
+    "@tanstack/react-query": "^4.2.1",
     "aos": "^3.0.0-beta.6",
-    "next": "12.1.6",
+    "axios": "^0.27.2",
+    "js-cookie": "^3.0.1",
+    "next": "^12.2.5",
+    "nextjs-progressbar": "^0.0.14",
+    "nprogress": "^0.2.0",
     "rc-tabs": "^11.16.1",
     "react": "18.2.0",
     "react-awesome-lightbox": "^1.8.1",
@@ -34,6 +39,7 @@
   "devDependencies": {
     "@types/aos": "^3.0.4",
     "@types/fancybox": "^3.5.3",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
